--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,16 +38,22 @@
             <div class="row g-3 select2">
                 <select class="form-select col " aria-label="Default select example">
                     <option selected>Informe a Gerência</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="1">GERÊNCIA GERAL</option>
+                    <option value="2">GERÊNCIA DE APOIO TECNICO E ADMINISTRATIVO</option>
+                    <option value="3">GERÊNCIA DE FISCALIZAÇÃO</option>
+                    <option value="3">GERÊNCIA DE JURIDICA</option>
+                    
                 </select>
 
                 <select class="form-select col" aria-label="Default select example">
                     <option selected>Informe o Setor</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option value="1">GERÊNCIA</option>
+                    <option value="2">IMPRENSA</option>
+                    <option value="3">NAS</Option>
+                    <option value="3">PATRONATO</Option>
+                    <option value="3">SECG</Option>
+                    <option value="3">SEDH</Option>
+                    <option value="3">SEJDC</Option>
                 </select>
             </div>
         </form>
