atualizaçaõ de margin

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,7 +88,7 @@
         </section>
         <div class="print_button_div"><button class="btn btn-primary no_print" onclick="window.print()">🖨
                 imprimir</button></div>
-        <section>
+        <section class="printMargin">
             <div class="row g-3 mt-5 mb-5">
                 <div class="col">
                     <label for="inputEmail4" class="form-label">Fornecido Em:</label>
