--- a/public/style/home.css
+++ b/public/style/home.css
@@ -17,7 +17,7 @@
 }
 .form_select{
     width: 100%;
-    padding: 10px 0px;
+    /* padding: 10px 0px; */
     border: none;
     background-color: transparent;
     outline: none;
@@ -64,4 +64,8 @@
     h1{
         font-size: 30px;
     }
+    .printMargin{
+        margin-top:-100px;
+    }
+
 }
